ontol/ontol-compiler/test-cases/error/sym/unfulfilled_existential_var.on
arc test {
    // a and b are existential type variables,
    // the property must be used at least once.
    (a) // ERROR existential variable is not associated with a definition
        prop:
        (b) // ERROR existential variable is not associated with a definition
}
